:globe_with_meridians: [#4246] Extract new frontend translation messages

--- a/src/openforms/js/lang/en.json
+++ b/src/openforms/js/lang/en.json
@@ -244,11 +244,6 @@
     "description": "Version of the object type in the Object Types API",
     "originalDefault": "Objects API - objecttype version"
   },
-  "5ZI59Y": {
-    "defaultMessage": "Main",
-    "description": "Choices (main/authorised person) label",
-    "originalDefault": "Main"
-  },
   "5uaKBM": {
     "defaultMessage": "minus",
     "description": "\"-\" operator description",
@@ -1169,11 +1164,6 @@
     "description": "Auth plugin provided attributes suffix",
     "originalDefault": "(provides {attrs})"
   },
-  "Q7oBP/": {
-    "defaultMessage": "Authorised person",
-    "description": "Choices (main/authorised person) label",
-    "originalDefault": "Authorised person"
-  },
   "Q8WgtE": {
     "defaultMessage": "Output mapping",
     "description": "Output mapping title",
@@ -1213,6 +1203,11 @@
     "defaultMessage": "Confidentiality",
     "description": "Indication of the level to which extend the dossier of the ZAAK is meant to be public",
     "originalDefault": "Confidentiality"
+  },
+  "R7XVbR": {
+    "defaultMessage": "Main/representee",
+    "description": "Identifier role (for mandate context) label for representee",
+    "originalDefault": "Main/representee"
   },
   "R8/zGm": {
     "defaultMessage": "Form variable",
@@ -2508,6 +2503,11 @@
     "defaultMessage": "Select definition",
     "description": "select definition icon title",
     "originalDefault": "Select definition"
+  },
+  "yIPUtA": {
+    "defaultMessage": "Authorizee",
+    "description": "Identifier role (for mandate context) label for authorizee",
+    "originalDefault": "Authorizee"
   },
   "yTpHh0": {
     "defaultMessage": "(unset)",
