--- a/src/openforms/js/lang/en.json
+++ b/src/openforms/js/lang/en.json
@@ -344,6 +344,11 @@
     "description": "Variable table registration title",
     "originalDefault": "Registration"
   },
+  "8/Nzyy": {
+    "defaultMessage": "Changing the Objects API group will remove the existing variables mapping. Are you sure you want to continue?",
+    "description": "Changing Objects API group warning message",
+    "originalDefault": "Changing the Objects API group will remove the existing variables mapping. Are you sure you want to continue?"
+  },
   "833GAg": {
     "defaultMessage": "Input mapping",
     "description": "Input mapping title",
@@ -1343,6 +1348,11 @@
     "defaultMessage": "All Submissions Removal Limit",
     "description": "All Submissions Removal Limit field label",
     "originalDefault": "All Submissions Removal Limit"
+  },
+  "UjvOBe": {
+    "defaultMessage": "Changing the objecttype will remove the existing variables mapping. Are you sure you want to continue?",
+    "description": "Changing objecttype warning message",
+    "originalDefault": "Changing the objecttype will remove the existing variables mapping. Are you sure you want to continue?"
   },
   "V21YkS": {
     "defaultMessage": "Confirm",
