:speech_balloon: [#4486] Fix spelling error

--- a/src/openforms/js/lang/nl.json
+++ b/src/openforms/js/lang/nl.json
@@ -333,7 +333,7 @@
     "originalDefault": "Next text"
   },
   "7cfkp6": {
-    "defaultMessage": "Verwachtte input-expressies",
+    "defaultMessage": "Verwachte invoer-expressies",
     "description": "DMN input expressions title",
     "originalDefault": "Expected input expressions"
   },
