--- a/src/openforms/js/lang/nl.json
+++ b/src/openforms/js/lang/nl.json
@@ -408,11 +408,6 @@
     "description": "Label for 'key' in MappingArrayInput table column",
     "originalDefault": "Key"
   },
-  "9N67XB": {
-    "defaultMessage": "Ongeldige JSON-syntaxis",
-    "description": "Advanced logic rule invalid json message",
-    "originalDefault": "Invalid JSON syntax"
-  },
   "9RDDDn": {
     "defaultMessage": "{varCount, plural, =0 {} one {(1 variabele ingesteld)} other {({varCount} variabelen ingesteld)} }",
     "description": "Managed complex Camunda process vars state feedback",
@@ -1228,6 +1223,11 @@
     "defaultMessage": "Formuliervariabele",
     "description": "Accessible label for (form) variable dropdown",
     "originalDefault": "Form variable"
+  },
+  "RA263v": {
+    "defaultMessage": "{viewMode, select, ui {Show JSON definition} json {Show editor} other {UNKNOWN}}",
+    "description": "Toggle icon for JSON logic presentation mode.",
+    "originalDefault": "{viewMode, select, ui {Show JSON definition} json {Show editor} other {UNKNOWN}}"
   },
   "RELMCa": {
     "defaultMessage": "Selecteer de Objecten API-groep.",
@@ -2144,11 +2144,6 @@
     "defaultMessage": "Triggervoorwaarde",
     "description": "Logic trigger heading",
     "originalDefault": "Trigger condition"
-  },
-  "naInSZ": {
-    "defaultMessage": "Toon/verberg DSL weergave",
-    "description": "JSON data preview visibility toggle",
-    "originalDefault": "Toggle DSL preview"
   },
   "nkr7r0": {
     "defaultMessage": "Aantal dagen dat een inzending bewaard blijft voordat deze definitief verwijderd wordt. Laat leeg om de waarde van de algemene configuratie te gebruiken.",
