--- a/src/openforms/js/lang/en.json
+++ b/src/openforms/js/lang/en.json
@@ -249,6 +249,11 @@
     "description": "Version of the object type in the Object Types API",
     "originalDefault": "Objects API - objecttype version"
   },
+  "5p7PF0": {
+    "defaultMessage": "Omschrijving of the INFORMATIEOBJECTTYPE in the Catalogi API to be used for the submission report CSV",
+    "description": "Objects API registration options \"Submission report CSV informatieobjecttype\" description",
+    "originalDefault": "Omschrijving of the INFORMATIEOBJECTTYPE in the Catalogi API to be used for the submission report CSV"
+  },
   "5uaKBM": {
     "defaultMessage": "minus",
     "description": "\"-\" operator description",
@@ -1429,11 +1434,6 @@
     "description": "Variable table prefill plugin title",
     "originalDefault": "Prefill plugin"
   },
-  "WnKF/i": {
-    "defaultMessage": "URL that points to the INFORMATIEOBJECTTYPE in the Catalogi API to be used for the submission attachments",
-    "description": "Objects API registration options \"Attachment informatieobjecttype\" description",
-    "originalDefault": "URL that points to the INFORMATIEOBJECTTYPE in the Catalogi API to be used for the submission attachments"
-  },
   "Wz5QZo": {
     "defaultMessage": "Active",
     "description": "Form list 'active' column header",
@@ -1513,11 +1513,6 @@
     "defaultMessage": "Add item",
     "description": "JSON editor: add array value button",
     "originalDefault": "Add item"
-  },
-  "Yyvvx1": {
-    "defaultMessage": "URL that points to the INFORMATIEOBJECTTYPE in the Catalogi API to be used for the submission report CSV",
-    "description": "Objects API registration options \"Submission report CSV informatieobjecttype\" description",
-    "originalDefault": "URL that points to the INFORMATIEOBJECTTYPE in the Catalogi API to be used for the submission report CSV"
   },
   "YzLSHY": {
     "defaultMessage": "Are you sure you want to delete this?",
@@ -1738,11 +1733,6 @@
     "defaultMessage": "Manage process variables",
     "description": "Camunda process var selection modal title",
     "originalDefault": "Manage process variables"
-  },
-  "eBtStW": {
-    "defaultMessage": "URL that points to the INFORMATIEOBJECTTYPE in the Catalogi API to be used for the submission report PDF",
-    "description": "Objects API registration options \"Submission report PDF informatieobjecttype\" description",
-    "originalDefault": "URL that points to the INFORMATIEOBJECTTYPE in the Catalogi API to be used for the submission report PDF"
   },
   "eJEu3L": {
     "defaultMessage": "Are you sure you want to delete this rule?",
@@ -2118,6 +2108,11 @@
     "defaultMessage": "Manage process variables",
     "description": "Open manage camunda process vars modal button",
     "originalDefault": "Manage process variables"
+  },
+  "n/+OWz": {
+    "defaultMessage": "Omschrijving of the INFORMATIEOBJECTTYPE in the Catalogi API to be used for the submission report PDF",
+    "description": "Objects API registration options \"Submission report PDF informatieobjecttype\" description",
+    "originalDefault": "Omschrijving of the INFORMATIEOBJECTTYPE in the Catalogi API to be used for the submission report PDF"
   },
   "n4Y2ex": {
     "defaultMessage": "Version",
@@ -2578,5 +2573,10 @@
     "defaultMessage": "Use logic rules to determine the price",
     "description": "dynamic pricing mode label",
     "originalDefault": "Use logic rules to determine the price"
+  },
+  "zxaohJ": {
+    "defaultMessage": "Omschrijving of the INFORMATIEOBJECTTYPE in the Catalogi API to be used for the submission attachments",
+    "description": "Objects API registration options \"Attachment informatieobjecttype\" description",
+    "originalDefault": "Omschrijving of the INFORMATIEOBJECTTYPE in the Catalogi API to be used for the submission attachments"
   }
 }
