--- a/src/openforms/js/lang/en.json
+++ b/src/openforms/js/lang/en.json
@@ -964,6 +964,11 @@
     "description": "Form theme field help text",
     "originalDefault": "Optional theme to use for styling."
   },
+  "L9L8X7": {
+    "defaultMessage": "Something went wrong while rendering the registration options",
+    "description": "Registration summary error message",
+    "originalDefault": "Something went wrong while rendering the registration options"
+  },
   "LD3weJ": {
     "defaultMessage": "Advanced configuration",
     "description": "Advanced configuration tab title",
