--- a/src/openforms/js/lang/nl.json
+++ b/src/openforms/js/lang/nl.json
@@ -317,11 +317,6 @@
     "description": "Form ID field help text",
     "originalDefault": "Unique identifier for the form"
   },
-  "7Vx5It": {
-    "defaultMessage": "Er is geen (relevante) registratiemethode ingesteld.",
-    "description": "Registration summary no registration backend fallback message",
-    "originalDefault": "No compatible registration backend configured."
-  },
   "7X6yT4": {
     "defaultMessage": "U bewerkt een bestaande set van formuliervelden! Deze wijziging heeft effect op <link>{count, plural, one {# formulier} other {# formulieren} }</link>.",
     "description": "Warning when modifying existing form definitions",
@@ -402,6 +397,11 @@
     "defaultMessage": "Kies het soort logica:",
     "description": "Logic type selection label",
     "originalDefault": "Please select the logic type:"
+  },
+  "9LdZVP": {
+    "defaultMessage": "Attribuut",
+    "description": "Variable prefill attribute label",
+    "originalDefault": "Attribute"
   },
   "9LflJr": {
     "defaultMessage": "Sleutel",
@@ -603,6 +603,12 @@
     "defaultMessage": "Er ging iets fout bij het ophalen van de beschikbare beslisdefinities. Is de geselecteerde DMN-plugin goed ingesteld en beschikbaar?",
     "description": "Admin error for API error when configuring Camunda actions",
     "originalDefault": "Could not retrieve the decision definitions IDs/versions. Is the selected DMN plugin running and properly configured?"
+  },
+  "DWhkNq": {
+    "defaultMessage": "Plugin",
+    "description": "Variable prefill plugin label",
+    "isTranslated": true,
+    "originalDefault": "Plugin"
   },
   "DaxIUG": {
     "defaultMessage": "Sleutel variabele",
@@ -1045,6 +1051,12 @@
     "description": "Custom confirmation email template explanation",
     "originalDefault": "Below you can specify a custom template for the configuration email. If not specified, the globally configured template will be used."
   },
+  "Mdnl0l": {
+    "defaultMessage": "Prefill",
+    "description": "Variable table prefill title",
+    "isTranslated": true,
+    "originalDefault": "Prefill"
+  },
   "MnfzL3": {
     "defaultMessage": "Plugin",
     "description": "Plugin ID label",
@@ -1054,11 +1066,6 @@
     "defaultMessage": "Formuliervariabelenconfiguratie",
     "description": "Form variables configuration editor fieldset title",
     "originalDefault": "Form variables configuration"
-  },
-  "MzMXRd": {
-    "defaultMessage": "Prefill-attribuut",
-    "description": "Variable table prefill attribute title",
-    "originalDefault": "Prefill attribute"
   },
   "NE5h2q": {
     "defaultMessage": "Omschrijving",
@@ -1116,10 +1123,10 @@
     "description": "Session expiry warning (in modal)",
     "originalDefault": "Your session is about to expire {delta}. Extend your session if you wish to continue."
   },
-  "OibWN2": {
-    "defaultMessage": "Prefill-bron",
-    "description": "Variable table identifier role attribute title",
-    "originalDefault": "Prefill identifier role"
+  "Oi+DV0": {
+    "defaultMessage": "<code>{attr}</code> uit <code>{plugin}</code> (van de {role})",
+    "description": "Prefill configuration summary",
+    "originalDefault": "<code>{attr}</code> from <code>{plugin}</code> (of the {role})"
   },
   "OmQdqG": {
     "defaultMessage": "Cache timeout",
@@ -1219,13 +1226,18 @@
     "description": "Payment backend options label",
     "originalDefault": "Payment backend options"
   },
+  "QsrtPz": {
+    "defaultMessage": "Prefill-instellingen",
+    "description": "Variable prefill configuration modal title",
+    "originalDefault": "Prefill configuration"
+  },
   "R78GMf": {
     "defaultMessage": "Vertrouwelijkheidaanduiding",
     "description": "Indication of the level to which extend the dossier of the ZAAK is meant to be public",
     "originalDefault": "Confidentiality"
   },
   "R7XVbR": {
-    "defaultMessage": "Ingelogde/vertegenwoordigde",
+    "defaultMessage": "hoofdentiteit",
     "description": "Identifier role (for mandate context) label for representee",
     "originalDefault": "Main/representee"
   },
@@ -1374,6 +1386,12 @@
     "description": "Changing objecttype warning message",
     "originalDefault": "Changing the objecttype will remove the existing variables mapping. Are you sure you want to continue?"
   },
+  "Uq9Hbx": {
+    "defaultMessage": "-",
+    "description": "Registration summary no registration backend fallback message",
+    "isTranslated": true,
+    "originalDefault": "-"
+  },
   "V21YkS": {
     "defaultMessage": "Bevestigen",
     "description": "Camunda process variables confirm button",
@@ -1435,11 +1453,6 @@
     "defaultMessage": "Logica",
     "description": "Form logic tab title",
     "originalDefault": "Logic"
-  },
-  "WjDh7l": {
-    "defaultMessage": "Prefill-plugin",
-    "description": "Variable table prefill plugin title",
-    "originalDefault": "Prefill plugin"
   },
   "WnKF/i": {
     "defaultMessage": "URL naar het INFORMATIEOBJECTTYPE in een Catalogi API die wordt gebruikt voor de bijlagen.",
@@ -1630,6 +1643,11 @@
     "defaultMessage": "{varName}: registratie-instellingen voor ''{backendName}''",
     "description": "Variable registration configuration modal title",
     "originalDefault": "{varName}: registration configuration for {backendName}"
+  },
+  "bmlODS": {
+    "defaultMessage": "Bronhouder",
+    "description": "Variable prefill identifier role label",
+    "originalDefault": "Identifier role"
   },
   "bnxtnX": {
     "defaultMessage": "Volledige HTTP-request",
@@ -1857,6 +1875,11 @@
     "defaultMessage": "Er zijn problemen in deze actie: {problems}.",
     "description": "Logic action warning icon text",
     "originalDefault": "Detected some problems in this action: {problems}."
+  },
+  "gqVGbb": {
+    "defaultMessage": "Prefill instellen",
+    "description": "'Edit variable prefill' icon label",
+    "originalDefault": "Edit prefill configuration"
   },
   "gr7edY": {
     "defaultMessage": "Applicatieversie",
@@ -2371,6 +2394,11 @@
     "defaultMessage": "Veld waar de achternaam voor een afspraak komt te staan",
     "description": "Last Name Component field help text",
     "originalDefault": "Component where the last name should be entered"
+  },
+  "tJQoMq": {
+    "defaultMessage": "De prefill-instellingen zijn niet geldig.",
+    "description": "Prefill configuration errors icon text",
+    "originalDefault": "There are errors in the prefill configuration."
   },
   "tLL2x4": {
     "defaultMessage": "Formulier configureren",
