:safety_vest: [#4567] Ensure validation errors are communicated
When there are option validation errors, ensure that a visual hint
exists to point out there are problems.

--- a/src/openforms/js/lang/en.json
+++ b/src/openforms/js/lang/en.json
@@ -1604,6 +1604,11 @@
     "description": "'Mapped to geometry' registration summary message",
     "originalDefault": "Mapped to the {geometryPath} attribute"
   },
+  "aDFrqO": {
+    "defaultMessage": "{numErrors, plural, one {There is a validation error.} other {There are {numErrors} validation errors.} }",
+    "description": "Objects API registration validation errors icon next to button",
+    "originalDefault": "{numErrors, plural, one {There is a validation error.} other {There are {numErrors} validation errors.} }"
+  },
   "aUChz/": {
     "defaultMessage": "Products Component",
     "description": "Products Component field label",
