:globe_with_meridians: [#4577] Translations

--- a/src/openforms/js/lang/en.json
+++ b/src/openforms/js/lang/en.json
@@ -1104,6 +1104,11 @@
     "description": "Warning that all simple variables are mapped",
     "originalDefault": "All simple variables are mapped to a case property."
   },
+  "NYJo4j": {
+    "defaultMessage": "Catalogue",
+    "description": "Objects API registration options 'catalogue' label",
+    "originalDefault": "Catalogue"
+  },
   "NwTdLM": {
     "defaultMessage": "Component where locations for an appointment will be shown",
     "description": "Locations Component field help text",
