--- a/src/openforms/js/lang/en.json
+++ b/src/openforms/js/lang/en.json
@@ -389,6 +389,11 @@
     "description": "Logic type selection label",
     "originalDefault": "Please select the logic type:"
   },
+  "9HyRBr": {
+    "defaultMessage": "Something went wrong retrieving the available catalogues. Please check that the services in the selected API group are configured correctly.",
+    "description": "ZGW APIs registrations options: catalogue select error",
+    "originalDefault": "Something went wrong retrieving the available catalogues. Please check that the services in the selected API group are configured correctly."
+  },
   "9LdZVP": {
     "defaultMessage": "Attribute",
     "description": "Variable prefill attribute label",
@@ -1478,6 +1483,11 @@
     "defaultMessage": "Date/time",
     "description": "Date/time column header",
     "originalDefault": "Date/time"
+  },
+  "WNPDeM": {
+    "defaultMessage": "Catalogue",
+    "description": "ZGW APIs registration options 'catalogue' label",
+    "originalDefault": "Catalogue"
   },
   "WQCs+M": {
     "defaultMessage": "Product",
